Bug 410489 - "gtk: wrong scrollbar in nodoka theme (git)" (make it possible for GTK themes to distinguish secondary steppers) [p=twanno@lycos.nl (Teune van Steeg) r+sr=roc a1.9=schrep]